# tauri_claude_tutorial

./: .gitignore  README.md
.github/workflows/: deploy.yml
cloudtone-starter/: .gitignore  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
cloudtone-starter/src/: App.tsx
cloudtone-starter/src-tauri/: Cargo.toml  tauri.conf.json
cloudtone-starter/src-tauri/capabilities/: default.json
cloudtone-starter/src-tauri/src/: lib.rs  main.rs
cloudtone-starter/src/styles/: index.css
tauri-master-book/: book.toml
tauri-master-book/src/: SUMMARY.md  appendix-a-faq.md  appendix-b-resources.md  appendix-c-code-index.md  ch01-what-is-tauri.md  ch02-setup.md  ch03-html-css.md  ch04-js-ts.md  ch05-react.md  ch06-tailwind.md  ch07-rust-essentials.md  ch08-architecture.md  ch09-hello-tauri.md  ch10-project-structure.md  ch11-commands.md  ch12-events.md  ch13-capabilities.md  ch14-window-menu-tray.md  ch15-shortcuts-single-instance.md  ch16-state-concurrency.md  ch17-fs-path.md  ch18-http-client.md  ch19-sqlite-sqlx.md  ch20-logging-error.md  ch21-product-design.md  ch22-bootstrap-project.md  ch23-layout-design-system.md  ch24-router-theme.md  ch25-zustand-query.md  ch26-audio-engine-1.md  ch27-audio-engine-2.md  ch28-library-scan.md  ch29-db-schema.md  ch30-playqueue.md  ch31-lyrics.md  ch32-covers-protocol.md  ch33-search.md  ch34-playlists.md  ch35-favorites.md  ch36-mini-lyric.md  (+16 more)
