[package]
name = "cloudtone"
version = "0.1.0"
edition = "2021"
description = "CloudTone — a cross-platform music player built with Tauri"
authors = ["you"]
license = "MIT"

[lib]
name = "cloudtone"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
